tests/ui/suggestions/undeclared-module-alloc.rs
//@ edition:2018

use alloc::rc::Rc; //~ ERROR failed to resolve: use of unresolved module or unlinked crate `alloc`

fn main() {}
